--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first Page</title>
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-<h1>Hello welcome to my first site</h1>
-<h2>This is updated</h2>
-
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
 
